update default env var

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 # General
 ACCESS_CONTROL_ALLOW_ORIGIN=http://localhost:3000
-PUBLIC_FILE_PATH=https://local.server.json.ms/private/files/
-JSONMS_CYPHER_KEY=urjMdK071cL935eKdczjEQ==
+PUBLIC_FILE_PATH=https://localhost:9200/private/files/
+JSONMS_CYPHER_KEY=
+JSONMS_SECRET_KEY=
