--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,5 @@
 {
+    "version": "1.0.0",
     "name": "jsonms/php",
     "description": "A JSON.ms requests handler to install on your own server.",
     "type": "library",
